src/objects/Retail_Forecast_Line__c.object
<CustomObject>
    <fields>
        <fullName>ASP__c</fullName>
        <label>ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Retail_Price_Book_Line__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <formula>Text(Retail_Price_Book_Line__r.Business__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <formula>TEXT(Retail_Price_Book_Line__r.Carrier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carrier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Amount__c</fullName>
        <formula>(ASP__c - MCPU__c ) * Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan GM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GM_Percentage__c</fullName>
        <formula>(ASP__c - MCPU__c) / ASP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan GM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MCPU__c</fullName>
        <label>MCPU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outlook_lines__c</fullName>
        <label>Outlook_lines</label>
        <summaryForeignKey>Retail_Outlook_Line__c.Retail_Forecast_Line__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>Retail_Price_Book_Line__r.Product__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>TEXT(Retail_Price_Book_Line__r.Product__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Retail_Price_Book_Line__r.Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Forecast__c</fullName>
        <label>Retail Forecast</label>
        <referenceTo>Retail_Forecast__c</referenceTo>
        <relationshipLabel>Retail Forecast Lines</relationshipLabel>
        <relationshipName>Retail_Forecast_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Retail_Price_Book_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retail Price Book Line</label>
        <referenceTo>Retail_Price_Book_Line__c</referenceTo>
        <relationshipLabel>Retail Forecast Lines</relationshipLabel>
        <relationshipName>Retail_Forecast_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retail_Pricebook__c</fullName>
        <formula>Retail_Forecast__r.Price_book__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retail Pricebook</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <formula>ASP__c * Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Plan Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Retail Forecast Line</label>
    <nameField>
        <displayFormat>FL-{000000}</displayFormat>
        <label>Line Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Forecast Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Deny_Upd_of_Forecast_Line_if_Hdr_Lockd</fullName>
        <active>true</active>
        <description>Do not allow update of Forecast Line object if Forecast header is locked.</description>
        <errorConditionFormula>AND(Retail_Forecast__r.Locked__c  = True,  ISCHANGED( Units__c ) )</errorConditionFormula>
        <errorMessage>You cannot update the Plan Units for a locked forecast.</errorMessage>
    </validationRules>
</CustomObject>